<resources>
    <string name="app_name">MyShop App</string>

    <!-- Register form -->
    <string name="content_description">image</string>
    <string name="register"> <u>Register</u> </string>
    <string name="title_login">LOGIN</string>
    <string name="title_ForgotPassword">Forgot Password</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="et_hint_confirm_password">Confirm Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="btn_lbl_Submit">Submit</string>
    <string name="btn_lbl_register">Register</string>

    <string name="dont_have_account">Don\'t have an account?</string>

    <string name="create_account">CREATE AN ACCOUNT</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="agree_terms">I Agree To The <u>Terms and Condition?</u></string>
    <string name="already_have_account">Already have an account?</string>

    <!-- Error Messages -->
    <string name="err_msg_enter_first_name">Please enter first name *Minimum 3 characters*.</string>
    <string name="err_msg_enter_last_name">Please enter last name *Minimum 3 characters*.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="Registered_Successfully">Thanks for Registering !</string>

    <string name="please_wait">Please Wait&#8230;</string>


</resources>